# soundstorm-acoustic-model

./: .gitignore  README.md  ckpt2pth.py  pyproject.toml  requirements.txt  test_pretrained_model.py  train.py
soundstorm/: config.py  data.py  dataset.py  scheduler.py  tokenizer.py  trainer.py
soundstorm/model/: rope.py  soundstorm.py  transformer.py
