[tool.poetry]
name = "soundstorm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
simple-parsing = "^0.1.6"
xformers = "^0.0.28.post3"
h5py = "^3.12.1"
lightning = "^2.4.0"
ipykernel = "^6.29.5"
wandb = "^0.18.7"
speechtokenizer = "^1.0.1"
beartype = "^0.19.0"
soundfile = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
